fix wrong background color

--- a/sass/web.site/_constants.sass
+++ b/sass/web.site/_constants.sass
@@ -23,6 +23,7 @@ $zon-red: #b91109
 @import "../constants"
 
 // semantic colors
+$color-body-bg: $white
 $color-page-bg: $white
 $color-text: $black
 $color-text-highlighted: $zon-red
